--- a/SMS/admissions/templates/admission_dashboard.html
+++ b/SMS/admissions/templates/admission_dashboard.html
@@ -2,87 +2,107 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-md-4">
-        <div class="card bg-primary">
-            <div class="heading">
-                <h4 class="title text-center"><u>School Capacity</u></h4>
+    <div class="col-lg-4 col-6">
+        <!-- small box -->
+        <div class="small-box bg-info">
+            <div class="inner">
+                <h3>{{ school_capacity  }}</h3>
+                <p>School Capacity</p>
             </div>
-            <div class="content">
-                <h2 class="title text-center"><strong>{{ school_capacity }}</strong></h2>
+            <div class="icon">
+                <i class="ion ion-pie-graph"></i>
             </div>
+            <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="card">
-            <div class="heading">
-                <h4 class="title text-center"><u>Students</u></h4>
+    <div class="col-lg-4 col-6">
+        <!-- small box -->
+        <div class="small-box bg-success">
+            <div class="inner">
+                <h3>{{ students_total }}</h3>
+                <p>Students</p>
             </div>
-            <div class="content">
-                <h2 class="title text-center"><strong>{{ students_total }}</strong></h2>
+            <div class="icon">
+                <i class="fas fa-users"></i>
             </div>
+            <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="card">
-            <div class="heading">
-                <h4 class="title text-center"><u>Vacancies</u></h4>
+    <div class="col-lg-4 col-6">
+        <!-- small box -->
+        <div class="small-box bg-warning">
+            <div class="inner">
+                <h3>{{ vacancies }}</h3>
+                <p>Vacancies</p>
             </div>
-            <div class="content">
-                <h2 class="title text-center"><strong>{{ vacancies }}</strong></h2>
+            <div class="icon">
+                <i class="ion ion-person-add"></i>
             </div>
+            <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
         </div>
     </div>
 </div>
 <div class="row">
-    <div class="content">
-        {% for class_data in class_rooms %}
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="heading">
-                        <h4 class="title text-center">{{ class_data  }}</h4>
-                    </div>
-                    <div class="content">
-                         <div class="panel-group" id="accordion">
-                             <div class="panel panel-primary">
-                                 <div class="panel-heading">
-                                     <h4 class="panel-title text-center " data-target="#{{ class_data }}" data-toggle="collapse" data-parent="accordion">
-                                         Streams
-                                         <!--b class="caret delete-class"></b-->
-                                         <span class="caret"></span>
-                                     </h4>
-                                 </div>
-                             </div>
-                             <div class="panel-collapse collapse" id="{{ class_data }}">
-                                 <div class="panel-body">
-                                     <table class="table table-inverse">
-                                         <thead>
-                                         <tr>
-                                             <th scope="col">Name</th>
-                                             <th scope="col">Status</th>
-                                         </tr>
-                                         </thead>
-                                         <tbody>
-                                         {% for data in class_streams %}
-                                         <tr>
-                                             {% if data.class_id == class_data %}
-                                             <td scope="col"><a class="btn btn-primary" href="{% url 'admissions:stream_view' slug=data.pk %}">{{ data }}</a></td>
-                                             <td scope="col">{{ data.class_status }} full</td>
-                                             {% endif %}
-                                         </tr>
-                                         {% endfor %}
-                                         </tbody>
-                                     </table>
-                                 </div>
-                             </div>
-                         </div>
-                       <!-- add other content here if interested -->
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-header">
+                <h2 class="title text-center">Available classes</h2>
+            </div>
+            <div class="card-body">
+                <div class="content">
+                    <div class="row">
+                        <table class="table">
+                          <thead>
+                            <tr>
+                              <th style="width: 10px">#</th>
+                              <th>Name</th>
+                              <th>Capacity</th>
+                              <th style="width: 40px">Label</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                          {% for class_room in class_rooms %}
+                            <tr>
+                              <td>{{ forloop.counter }}</td>
+                                <td><a class="btn btn-primary" href="{% url 'admissions:stream_view' slug=class_room.pk %}">{{ class_room }}</a></td>
+                              <td>
+                                <div class="progress progress-xs">
+                                  <div class="progress-bar progress-bar-danger" style="width: {{ class_room.class_status }}"></div>
+                                </div>
+                              </td>
+                              <td><span class="badge bg-success">{{ class_room.class_status }}</span></td>
+                            </tr>
+                          {% endfor %}
+                          </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
-            {% endfor %}
+        </div>
+    </div>
+    <div class="col-md-6">
+        <!-- AREA CHART -->
+        <div class="card card-primary">
+            <div class="card-header">
+                <h3 class="card-title">Area Chart</h3>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="chart">
+                    <canvas id="areaChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                </div>
+            </div>
+            <!-- /.card-body -->
+        </div>
     </div>
 </div>
+
 {% endblock  %}
+
 
 
 
