--- a/SMS/admissions/templates/teachers_admissions/teacher_admission.html
+++ b/SMS/admissions/templates/teachers_admissions/teacher_admission.html
@@ -1,12 +1,18 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+
+{% block page_header %}
+<div class="col-sm-6">
+    <ol class="breadcrumb float-sm-left">
+        <li class="breadcrumb-item"><a href="{% url 'admissions:dashboard' %}">Home</a></li>
+        <li class="breadcrumb-item active"><a href="#">Dashboard v1</a></li>
+    </ol>
+</div>
+{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-md-12">
         <div class="card">
-            <div class="header">
-                <h4 class="title text-center">Teachers Admission</h4>
-            </div>
             <div class="content">
                 <form  method="post">
                     {% csrf_token %}
@@ -25,8 +31,14 @@
                                 <div class="form-group col-md-4 mb-0">
                                     {{ teacher_form.last_name|as_crispy_field }}
                                 </div>
-                                <div class="form-group col-md-12 mb-0">
+                                <div class="form-group col-md-4 mb-0">
                                     {{ teacher_form.gender|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-4 mb-0">
+                                    {{ teacher_form.nationality|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-4 mb-0">
+                                    {{ teacher_form.national_id|as_crispy_field }}
                                 </div>
                             </div>
                             <div class="form-row">
