--- a/SMS/core/templates/base.html
+++ b/SMS/core/templates/base.html
@@ -1,5 +1,5 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
     <meta charset="utf-8">
@@ -305,7 +305,8 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 class="m-0 text-dark">Dashboard</h1>
+                        {% block page_header %}
+                        {% endblock %}
                     </div><!-- /.col -->
                     <div class="col-sm-6">
                          {% if messages %}
@@ -382,6 +383,7 @@
 <script src="{% static 'plugins/summernote/summernote-bs4.min.js' %}"></script>
 <!-- overlayScrollbars -->
 <script src="{% static 'plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
+<script src="{% static 'plugins/chart.js/Chart.min.js' %}"></script>
 <!-- AdminLTE App -->
 <script src="{% static 'dist/js/adminlte.js' %}"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
