--- a/SMS/core/templates/sidebar-menu.html
+++ b/SMS/core/templates/sidebar-menu.html
@@ -129,7 +129,7 @@
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
-                    <a href="{% url 'academic:student_attendance' %}" class="nav-link">
+                    <a href="#" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
                         <p>Manage Attendance</p>
                     </a>
@@ -175,7 +175,7 @@
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
-                    <a href="pages/UI/general.html" class="nav-link">
+                    <a href="{% url 'academic:exam_management' %}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
                         <p>Exams List</p>
                     </a>
