--- a/SMS/admissions/templates/student_admission.html
+++ b/SMS/admissions/templates/student_admission.html
@@ -94,13 +94,13 @@
                                         <div class="row">
                                             <div class="form-row">
                                                 <div class="form-group col-md-4 mb-0">
-                                                    {{ address_form.address|as_crispy_field }}
+                                                    {{ parent_form.address|as_crispy_field }}
                                                 </div>
                                                 <div class="form-group col-md-4 mb-0">
-                                                    {{ address_form.email|as_crispy_field }}
+                                                    {{ parent_form.email|as_crispy_field }}
                                                 </div>
                                                 <div class="form-group col-md-4 mb-0">
-                                                    {{ address_form.phone_number|as_crispy_field }}
+                                                    {{ parent_form.phone_number|as_crispy_field }}
                                                 </div>
                                             </div>
                                         </div>
