--- a/SMS/Academics/templates/exam_management_temp/exam_management.html
+++ b/SMS/Academics/templates/exam_management_temp/exam_management.html
@@ -68,7 +68,7 @@
 
 {% block extra_scripts %}
 <script>
-    $('.js-add-exam').click(function(){
+    $('.js-add-exam').click('function(){
         $.ajax({
             url: '{% url 'academic:add_exam' %}',
             dataType: 'json',
