--- a/SMS/core/templates/sidebar-menu.html
+++ b/SMS/core/templates/sidebar-menu.html
@@ -129,13 +129,13 @@
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="{% url 'attendance:students_attendance' %}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
                         <p>Manage Attendance</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="pages/UI/buttons.html" class="nav-link">
+                    <a href="{% url 'attendance:students_attendance_report' %}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
                         <p>Attendance Report</p>
                     </a>
