--- a/SMS/admissions/templates/teachers_view.html
+++ b/SMS/admissions/templates/teachers_view.html
@@ -159,7 +159,7 @@
     });
 </script>
 <script>
-    $(document).ready(function(){
+    $(document).ready(function()
         $('#example').DataTable({
           "paging": true,
           "lengthChange": true,
